# cavi

./: README.md
kvstore/: Cargo.toml
kvstore-api/: Cargo.toml  config.yaml
kvstore-api/src/: app.rs  config.rs  main.rs  types.rs
kvstore-api/src/remote/: http.rs  mod.rs
kvstore-api/src/shard/: config.rs  router.rs
kvstore-api/tests/: api_tests.rs
kvstore/src/: error.rs  kv.rs  lib.rs
kvstore/src/engine/: mem.rs
