[package]
name = "kvstore-api"
version = "0.1.0"
edition = "2024"

[dependencies]
kvstore = { path = "../kvstore" }
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"
tower = { version = "0.4", features = ["full"] }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["full"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["full"] }